Prevent default on mobile scroll

--- a/app/less/common.less
+++ b/app/less/common.less
@@ -21,7 +21,7 @@ body {
 	left: 0;
 	bottom: 0;
 	right: 0;
-	-webkit-overflow-scrolling: auto;
+	overflow: hidden;
 }
 
 body {
